apps/cloudbeaver/envs/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudbeaver-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: cloudbeaver.cluster.simonjung.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudbeaver
                port:
                  number: 8978
  tls:
    - hosts:
        - cloudbeaver.cluster.simonjung.io
      secretName: cloudbeaver-ingress-secret
